plugins/lombok/testData/inspection/superbuilder/BuilderRightType.java
<error descr="@SuperBuilder is only supported on classes.">@lombok.experimental.SuperBuilder</error>
enum BuilderEnumError {
}

<error descr="@SuperBuilder is only supported on classes.">@lombok.experimental.SuperBuilder</error>
interface BuilderInterfaceError {
}

<error descr="@SuperBuilder is only supported on classes.">@lombok.experimental.SuperBuilder</error>
@interface BuilderAnnotationError {
}


